--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "dependencies": {
+    "app-root-path": "^3.1.0",
+    "aws-sdk": "^2.1294.0",
     "mysqldump": "^3.2.0",
     "node-cron": "^3.0.2",
     "pm2": "^5.2.2"
   },
   "type": "module",
   "scripts": {
-    "start":"pm2 stop pm2.json && pm2 start pm2.json",
-    "log":"sudo pm2 logs"
+    "dev": "node app.js",
+    "start": "sudo pm2 stop pm2.json && sudo pm2 start pm2.json",
+    "log": "sudo pm2 logs"
   }
 }
