--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "type": "module",
   "scripts": {
     "dev": "node app.js",
-    "start": "sudo pm2 stop pm2.json && sudo pm2 start pm2.json",
-    "stop": "sudo pm2 stop pm2.json",
-    "log": "sudo pm2 logs"
+    "start": "pm2 stop pm2.json && pm2 start pm2.json",
+    "stop": "pm2 stop pm2.json",
+    "log": "pm2 logs"
   }
 }
